<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Material3.CardView.Filled"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/pokemon_img"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:contentDescription="@string/pokemon_image"
            android:scaleType="centerInside"
            android:src="@drawable/pokemon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/pokemon_id_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/n_0001"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pokemon_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bulbasaur"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>