<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_btn_search"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/left" />

        <ImageButton
            android:id="@+id/share_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_btn_search"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/share" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/job_img_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar_container">

        <ImageView
            android:id="@+id/pokemon_img"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/pokemon" />

        <TextView
            android:id="@+id/pokemon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans_bold"
            android:text="Charmeleon"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/title_section_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/pokemon_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/dm_sans"
                android:text="@string/n_0001" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/job_img_container">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Physical measurements" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats" />

    </com.google.android.material.tabs.TabLayout>

    <ScrollView
        android:id="@+id/details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        app:layout_constraintBottom_toTopOf="@id/apply_buttons_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/dm_sans_bold"
                android:text="Description"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pokemon_detail_txr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans"
                android:text="@string/este_pok_mon_de_naturaleza_agresiva_ataca_en_combate_con_su_cola_llameante_y_hace_trizas_al_rival_con_sus_afiladas_garras"
                android:textSize="11sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/apply_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/like_job_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_btn_search"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/heart" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mode_details.txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_btn_search"
            android:text="More details"
            android:textColor="@color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>